--- a/api-gestion-couriel-prod.properties
+++ b/api-gestion-couriel-prod.properties
@@ -1,4 +1,4 @@
-#server.port=8082
+server.port=8082
 # DataSource Configuration for Production
 spring.datasource.url=jdbc:mysql://db_gestion_couriel:3306/gestion_couriel
 spring.datasource.username=sene
