--- a/api-user-gestion-couriel-prod.properties
+++ b/api-user-gestion-couriel-prod.properties
@@ -1,4 +1,4 @@
-#server.port=8081
+server.port=8081
 # DataSource Configuration for Production
 spring.datasource.url=jdbc:mysql://db_user_couriel:3306/users-gestion-couriel
 spring.datasource.username=sene
